# GOSKernel

./: .cursorrules  .gitignore  Cargo.toml  Makefile  README.md  run.ps1  rust-toolchain.toml  scratch_cypher.py  tmp_err.txt  x86_64-gos-kernel.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: graph-governance.yml  installer-artifact.yml
crates/gos-ai-bridge/: Cargo.toml
crates/gos-ai-bridge/src/: lib.rs
crates/gos-cluster/: Cargo.toml
crates/gos-cluster/src/: lib.rs
crates/gos-cypher-mut/: Cargo.toml
crates/gos-cypher-mut/src/: lib.rs
crates/gos-hal/: Cargo.toml
crates/gos-hal/src/: lib.rs  meta.rs  ngr.rs  phys.rs  vaddr.rs
crates/gos-journal/: Cargo.toml
crates/gos-journal/src/: lib.rs
crates/gos-loader/: Cargo.toml
crates/gos-loader/src/: elf.rs  gosmod.rs  lib.rs
crates/gos-log/: Cargo.toml
crates/gos-log/src/: lib.rs
crates/gos-protocol/: Cargo.toml
crates/gos-protocol/src/: block.rs  lib.rs  socket.rs  stem.rs  trap.rs  vectors.rs
crates/gos-runtime/: Cargo.toml
crates/gos-runtime/src/: lib.rs
crates/gos-sign/: Cargo.toml
crates/gos-sign/src/: lib.rs
crates/gos-supervisor/: Cargo.toml
crates/gos-supervisor/src/: lib.rs
crates/gos-verify/: Cargo.toml
crates/gos-verify/src/: lib.rs
crates/gos-vfs/: Cargo.toml
crates/gos-vfs/src/: lib.rs
crates/hypervisor/: Cargo.toml
crates/hypervisor/src/: builtin_bundle.rs  main.rs  ring3.rs
crates/k-ai/: Cargo.toml
crates/k-ai/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-chat/: Cargo.toml
crates/k-chat/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-core/: Cargo.toml
crates/k-core/src/: lib.rs  post.rs  pre.rs  proc.rs  switch.S
crates/k-cpuid/: Cargo.toml
crates/k-cpuid/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-ctx/: Cargo.toml
crates/k-ctx/src/: lib.rs
crates/k-cuda-host/: Cargo.toml
crates/k-cuda-host/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-cypher/: Cargo.toml
crates/k-cypher/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-fat32/: Cargo.toml
crates/k-fat32/src/: lib.rs
crates/k-gdt/: Cargo.toml
crates/k-gdt/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-heap/: Cargo.toml
crates/k-heap/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-idt/: Cargo.toml
crates/k-idt/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-ime/: Cargo.toml
crates/k-ime/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-mouse/: Cargo.toml
crates/k-mouse/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-net/: Cargo.toml
crates/k-net/src/: lib.rs  post.rs  pre.rs  proc.rs  tcp.rs
crates/k-nim/: Cargo.toml
crates/k-nim/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-panic/: Cargo.toml
crates/k-panic/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-pic/: Cargo.toml
crates/k-pic/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-pit/: Cargo.toml
crates/k-pit/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-pmm/: Cargo.toml
crates/k-pmm/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-ps2/: Cargo.toml
crates/k-ps2/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-serial/: Cargo.toml
crates/k-serial/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-shell/: Cargo.toml
crates/k-shell/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-vga/: Cargo.toml
crates/k-vga/src/: lib.rs  post.rs  pre.rs  proc.rs
crates/k-vmm/: Cargo.toml
crates/k-vmm/src/: lib.rs  post.rs  pre.rs  proc.rs
doc/: CYPHER_NODE_zh.md  GITHUB_DESCRIPTION_020.md  GOS_ARCH_v2.md  GOS_GOVERNANCE_v0_2.md  GOS_RUNTIME_v0.1_SPEC.md  GRAPH_CLI_COMMANDS_zh.md  GRAPH_NATIVE_SCHEDULING_zh.md  INSTALL_BARE_METAL_zh.md  NETWORK_NODE_zh.md  PHASE_B4_DOMAIN_ISOLATION.md  RULE_GRAPH_PRIME.md  SYSTEM_TEST_REPORT.md  design_v0_1_master_zh.md  implementation_plan_v0_1_zh.md  task_v0_1_zh.md
host-tests/: run-gos-supervisor-validation.ps1
host-tests/gos-runtime-harness/: Cargo.toml
host-tests/gos-runtime-harness/tests/: runtime.rs
host-tests/gos-supervisor-harness/: Cargo.toml
host-tests/gos-supervisor-harness/tests/: supervisor.rs
plan/: OPTIMIZATION_PLAN.md
src/: main.rs  panic.rs
src/hal/: mod.rs  serial.rs  vga_buffer.rs
src/pluginGroup/: mod.rs
src/pluginGroup/K_CPUID/: mod.rs
src/pluginGroup/K_CPUID/edge/: init.rs
src/pluginGroup/K_CPUID/node/: mod.rs
src/pluginGroup/K_GDT/edge/: init.rs
src/pluginGroup/K_GDT/node/: mod.rs
src/pluginGroup/K_IDT/edge/: init.rs  mod.rs  route.rs
src/pluginGroup/K_IDT/node/: mod.rs
src/pluginGroup/K_PANIC/edge/: mod.rs  panic.rs
src/pluginGroup/K_PANIC/node/: mod.rs
src/pluginGroup/K_PIC/edge/: init.rs
src/pluginGroup/K_PIC/node/: mod.rs
src/pluginGroup/K_PIT/edge/: init.rs  mod.rs  timer.rs
src/pluginGroup/K_PS2/edge/: init.rs  keyboard.rs  mod.rs
src/pluginGroup/K_PS2/node/: mod.rs
src/pluginGroup/K_SERIAL/edge/: init.rs  mod.rs  print.rs
src/pluginGroup/K_SERIAL/node/: mod.rs
src/pluginGroup/K_VGA/: mod.rs
src/pluginGroup/K_VGA/edge/: control.rs  init.rs  mod.rs  print.rs  writer_ops.rs
src/pluginGroup/K_VGA/node/: mod.rs
test-frames/: .gitignore  probe.py
tools/: build-installer.ps1  chat-bridge.py  verify-graph-architecture.ps1  wire-vectors.ps1  write-usb-image.ps1
xtask/: Cargo.toml
xtask/src/: main.rs
