[workspace]
resolver = "2"
members = [
    "crates/hypervisor",
    "crates/gos-protocol",
    "crates/gos-runtime",
    "crates/gos-loader",
    "crates/gos-hal",
    "crates/k-panic",
    "crates/k-vga",
    "crates/k-serial",
    "crates/k-gdt",
    "crates/k-idt",
    "crates/k-pic",
    "crates/k-pit",
    "crates/k-ps2",
    "crates/k-cpuid",
    "crates/k-pmm",
    "crates/k-vmm",
    "crates/k-heap",
    "crates/k-shell",
    "crates/k-ai",
    "crates/k-cypher",
    "crates/k-ime",
    "crates/k-net",
    "crates/k-mouse",
]
