[workspace]
resolver = "2"
members = [
    "crates/hypervisor",
    "crates/gos-protocol",
    "crates/gos-runtime",
    "crates/gos-loader",
    "crates/gos-hal",
    "crates/gos-journal",
    "crates/gos-log",
    "crates/gos-sign",
    "crates/gos-supervisor",
    "crates/gos-vfs",
    "crates/k-fat32",
    "crates/k-panic",
    "crates/k-vga",
    "crates/k-serial",
    "crates/k-gdt",
    "crates/k-idt",
    "crates/k-pic",
    "crates/k-pit",
    "crates/k-ps2",
    "crates/k-cpuid",
    "crates/k-pmm",
    "crates/k-vmm",
    "crates/k-heap",
    "crates/k-shell",
    "crates/k-ai",
    "crates/k-cuda-host",
    "crates/k-cypher",
    "crates/k-ime",
    "crates/k-net",
    "crates/k-mouse",
    "crates/k-core",
    "crates/k-chat",
    "crates/k-nim",
]
