[package]
name = "gos-supervisor"
version = "0.2.0"
edition = "2021"

[features]
default = ["kernel-vmm"]
kernel-vmm = ["dep:k-vmm"]
host-testing = []

[dependencies]
gos-protocol = { path = "../gos-protocol" }
gos-runtime = { path = "../gos-runtime" }
gos-sign = { path = "../gos-sign" }
k-vmm = { path = "../k-vmm", optional = true }
spin = "0.9"
x86_64 = "0.14"
