[package]
name = "gos-kernel"
version = "0.2.0"
edition = "2021"

[dependencies]
gos-protocol = { path = "../gos-protocol" }
gos-hal = { path = "../gos-hal" }
gos-runtime = { path = "../gos-runtime" }
gos-ai-bridge = { path = "../gos-ai-bridge" }
gos-cluster = { path = "../gos-cluster" }
gos-cypher-mut = { path = "../gos-cypher-mut" }
gos-journal = { path = "../gos-journal" }
gos-log = { path = "../gos-log" }
gos-sign = { path = "../gos-sign" }
gos-supervisor = { path = "../gos-supervisor" }
gos-vfs = { path = "../gos-vfs" }
k-panic = { path = "../k-panic" }
k-serial = { path = "../k-serial" }
k-vga = { path = "../k-vga" }
k-gdt = { path = "../k-gdt" }
k-cpuid = { path = "../k-cpuid" }
k-idt = { path = "../k-idt" }
k-pic = { path = "../k-pic" }
k-pit = { path = "../k-pit" }
k-ps2 = { path = "../k-ps2" }
k-pmm = { path = "../k-pmm" }
k-vmm = { path = "../k-vmm" }
k-heap = { path = "../k-heap" }
k-shell = { path = "../k-shell" }
k-ai = { path = "../k-ai" }
k-cuda-host = { path = "../k-cuda-host" }
k-cypher = { path = "../k-cypher" }
k-ime = { path = "../k-ime" }
k-net = { path = "../k-net" }
k-mouse = { path = "../k-mouse" }
k-chat = { path = "../k-chat" }
k-nim  = { path = "../k-nim" }
k-fat32 = { path = "../k-fat32" }
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
x86_64 = "0.14"

[package.metadata.bootimage]
run-args = ["-serial", "stdio", "-serial", "tcp:127.0.0.1:14444,server,nowait", "-no-reboot", "-monitor", "telnet:127.0.0.1:55555,server,nowait", "-netdev", "user,id=gosnet0", "-device", "e1000,netdev=gosnet0,mac=52:54:00:12:34:56"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300
