[package]
name = "k-ps2"
version = "0.2.0"
edition = "2021"

[dependencies]
gos-protocol = { path = "../gos-protocol" }
gos-hal      = { path = "../gos-hal" }
gos-runtime  = { path = "../gos-runtime" }
k-pic        = { path = "../k-pic" }
k-vga        = { path = "../k-vga" }
k-shell      = { path = "../k-shell" }
k-ime        = { path = "../k-ime" }
pc-keyboard  = "0.7.0"
spin         = "0.9"
x86_64       = "0.14"
