[package]
name = "k-shell"
version = "0.2.0"
edition = "2024"

[dependencies]
gos-protocol = { path = "../gos-protocol" }
gos-hal = { path = "../gos-hal" }
gos-runtime = { path = "../gos-runtime" }
gos-supervisor = { path = "../gos-supervisor", default-features = false }
gos-log = { path = "../gos-log" }
k-pmm = { path = "../k-pmm" }
spin = "0.9"
