[package]
name = "gos-runtime-harness"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
gos-protocol = { path = "../../crates/gos-protocol" }
gos-runtime = { path = "../../crates/gos-runtime" }
gos-loader = { path = "../../crates/gos-loader" }
gos-log = { path = "../../crates/gos-log" }
gos-vfs = { path = "../../crates/gos-vfs" }
k-fat32 = { path = "../../crates/k-fat32" }
